--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <article>
           <div class="card">
            <a href="4index.html">
-             <img class="img" src="images/gromkogovoritel2.jpg">
+             <img class="img" src="gromkogovoritel2.jpg">
          </a>
            <div class="text">Важная информация</div>
             <p></p>
