--- a/1index.html
+++ b/1index.html
@@ -17,6 +17,7 @@
  <div class="fields">
  </div>
 </div>
+    <li><a class="menu" href="index.html">Назад</a></li>
 <link rel="stylesheet" href="style.css">
 <header>
     <nav>
@@ -38,7 +39,7 @@
         <article>
           <div class="card">
            <a href="5index.html">
-             <img class="img" src="images/spaceman_money_one.jpg">
+             <img class="img" src="spaceman_money_one.jpg">
          </a>
            <div class="text">Игра "Подземные космонавты"</div>
             <p></p>
@@ -51,7 +52,7 @@
         <article>
           <div class="card">
            <a href="6index.html">
-             <img class="img" src="images/">
+             <img class="img" src="">
          </a>
            <div class="text">Игра "Котучие машины"</div>
             <p></p>
