--- a/indexP.html
+++ b/indexP.html
@@ -58,7 +58,6 @@ function handle() {
     for (let i = 0; i < inputs.length; i++) {
         input_values.push(inputs[i].value);
     }
-}
-       </script>
+}       </script>
 </body>
 </html>
