--- a/1index.html
+++ b/1index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -17,13 +18,13 @@
  <div class="fields">
  </div>
 </div>
-    <li><a class="menu" href="index.html">Назад</a></li>
 <link rel="stylesheet" href="style.css">
 <header>
     <nav>
      <ul>    
       <li><a class="menu" href="2index.html">Студия</a></li>
       <li><a class="menu"href="3index.html">Поддержка</a></li>
+      <li><a class="menu"href="index.html">Назад</a></li>
      </ul>
     </nav>
    </header>
@@ -39,7 +40,7 @@
         <article>
           <div class="card">
            <a href="5index.html">
-             <img class="img" src="spaceman_money_one.jpg">
+             <img class="img" src="images/spaceman_money_one.jpg">
          </a>
            <div class="text">Игра "Подземные космонавты"</div>
             <p></p>
@@ -52,7 +53,7 @@
         <article>
           <div class="card">
            <a href="6index.html">
-             <img class="img" src="">
+             <img class="img" src="images/">
          </a>
            <div class="text">Игра "Котучие машины"</div>
             <p></p>
